dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=blocxd.1
endif

if ENABLE_QT
  dist_man1_MANS+=blocx-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=blocx-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=blocx-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=blocx-wallet.1
endif
endif
